--- a/src/app/scout/scout.component.html
+++ b/src/app/scout/scout.component.html
@@ -245,12 +245,12 @@
                 <ion-col>
                     <ion-button
                             expand="block"
-                            color="light" (click)="parentDataForm.reset()" >Clear</ion-button>
+                            color="light" (click)="createParentDataForm()">Clear</ion-button>
                 </ion-col>
                 <ion-col>
                     <ion-button
                             expand="block"
-                            color="danger" (click)="parentDataForm.reset(); router.navigateByUrl('/setup')">
+                            color="danger" (click)="createParentDataForm(); router.navigateByUrl('/setup')">
                         Cancel
                     </ion-button>
                 </ion-col>
