improved comment form

--- a/src/app/scout/auto/auto.component.html
+++ b/src/app/scout/auto/auto.component.html
@@ -14,16 +14,16 @@
                     </ion-row>
                     <ion-row>
                         <ion-col size="2">
-                            <ul class="ns-auto-ul-blue">
-                                <li> :{{parentData.teamDetails.idAlliance}} - {{parentData.teamDetails.idDriveStation}}</li>
-                                <li>
-                                   {{autoForm.value['position']['red1']}}
-                                </li>
-                                <li *ngIf="autoForm.value['position']['red1']">
-                                    Red 1
+<!--                            <ul class="ns-auto-ul-blue">-->
+<!--                                <li> :{{parentData.teamDetails.idAlliance}} - {{parentData.teamDetails.idDriveStation}}</li>-->
+<!--                                <li>-->
+<!--                                   {{autoForm.value['position']['red1']}}-->
+<!--                                </li>-->
+<!--                                <li *ngIf="autoForm.value['position']['red1']">-->
+<!--                                    Red 1-->
 
-                                </li>
-                            </ul>
+<!--                                </li>-->
+<!--                            </ul>-->
 
                         </ion-col>
                         <ion-col>
@@ -31,11 +31,11 @@
                         </ion-col>
 
                         <ion-col size="2">
-                            <ul *ngIf="parentData.teamDetails.idAlliance === 1" class="ns-auto-ul-red">
-                                <li *ngIf="parentData.teamDetails.idDriveStation === 1">
-                                    one
-                                </li>
-                            </ul>
+<!--                            <ul *ngIf="parentData.teamDetails.idAlliance === 1" class="ns-auto-ul-red">-->
+<!--                                <li *ngIf="parentData.teamDetails.idDriveStation === 1">-->
+<!--                                    one-->
+<!--                                </li>-->
+<!--                            </ul>-->
                         </ion-col>
                     </ion-row>
                 </ion-col>
