--- a/src/app/scout/tele/tele.component.html
+++ b/src/app/scout/tele/tele.component.html
@@ -2,7 +2,7 @@
     <ion-row>
         <ion-col>
             <ion-row formGroupName="performance">
-                <ion-col class="ns-card-form">
+                <ion-col class="ns-card">
                     <ion-row>
                         <ion-col>
                             <ion-item color="medium">
