--- a/src/assets/sass/_ns-card.scss
+++ b/src/assets/sass/_ns-card.scss
@@ -16,6 +16,12 @@
   text-align: center;
 }
 
+.ns-card-no-padding {
+  @extend .ns-card;
+  padding: 0;
+  margin: 0;
+}
+
 .ns-card-info {
   @extend .ns-card;
   color: $info;
