--- a/src/app/scout/comment/comment.component.html
+++ b/src/app/scout/comment/comment.component.html
@@ -3,7 +3,7 @@
         <ion-col class="ns-card-form">
             <ion-row>
                 <ion-col>
-                    <ion-item color="primary">
+                    <ion-item color="medium">
                         <ion-label>
                             Quick Ratings
                         </ion-label>
@@ -15,13 +15,13 @@
                     <ion-list>
                         <ion-item>
                             <ion-label>
-                                Assist
+                                Assist Other Robot
                             </ion-label>
-                            <ion-toggle formControlName="comm_flAssist" color="primary"></ion-toggle>
+                            <ion-toggle formControlName="comm_flAssist" color="medium"></ion-toggle>
                         </ion-item>
                         <ion-item>
                             <ion-label>
-                                Ability
+                                Drive Rating
                             </ion-label>
                             <ion-select formControlName="comm_flAssist">
                                 <ion-select-option value="1">Terrible</ion-select-option>
@@ -89,7 +89,7 @@
             <ion-row>
                 <ion-col formGroupName="loadType" class="ns-card-form">
                     <ion-list>
-                        <ion-item color="primary">
+                        <ion-item color="medium">
                             <ion-label>
                                 Intake
                             </ion-label>
@@ -110,7 +110,7 @@
                 </ion-col>
                 <ion-col formGroupName="shotType" class="ns-card-form">
                     <ion-list>
-                        <ion-item color="primary">
+                        <ion-item color="medium">
                             <ion-label>Shot Type</ion-label>
                         </ion-item>
                         <ion-item>
@@ -144,8 +144,8 @@
     </ion-row>
 
     <ion-row>
-        <ion-col formGroupName="advice">
-            <ion-item color="primary">
+        <ion-col formGroupName="advice" class="ns-card-form">
+            <ion-item color="medium">
                 <ion-label>
                     Comments
                 </ion-label>
@@ -153,13 +153,13 @@
             <ion-item>
                 <ion-textarea placeholder="Comments on performance" formControlName="comm_txNotes"></ion-textarea>
             </ion-item>
-            <ion-item>
+            <ion-item color="warning">
                 <ion-label>
                     Highlight team (consider regardless of performance)
                 </ion-label>
                 <ion-toggle color="primary" formControlName="comm_flHighlight"></ion-toggle>
             </ion-item>
-            <ion-item>
+            <ion-item color="warning">
                 <ion-label>
                     Warning (Scout team further before considering)
                 </ion-label>
@@ -173,7 +173,19 @@
             <ion-button
                     [disabled]="commentForm.pristine || commentForm.invalid"
                     expand="block" color="success">
-                Save Comments
+                Save Auto
+            </ion-button>
+        </ion-col>
+        <ion-col>
+            <ion-button (click)="commentForm.reset()"
+                        expand="block" color="light">
+                Clear
+            </ion-button>
+        </ion-col>
+        <ion-col>
+            <ion-button (click)="router.navigateByUrl('/setup')"
+                        expand="block" color="danger">
+                Cancel
             </ion-button>
         </ion-col>
     </ion-row>
