--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
+  <ion-split-pane when="xl" disabled="true" contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content>
+      <ion-content class="ns-menu-content">
         <ion-list>
           <ion-menu-toggle auto-hide="false">
             <ion-item routerLink="setup">
