added storage component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,11 @@
                 Scout
               </ion-label>
             </ion-item>
-<!--            <ion-item routerLink="qr">-->
-<!--              <ion-label>-->
-<!--                QR Code-->
-<!--              </ion-label>-->
-<!--            </ion-item>-->
+            <ion-item routerLink="storage">
+              <ion-label>
+                Storage & QR
+              </ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
