--- a/src/app/scout/auto/auto.component.html
+++ b/src/app/scout/auto/auto.component.html
@@ -88,7 +88,7 @@
         </ion-col>
         <ion-col>
             <ion-row>
-                <ion-col formGroupName="errors" class="ns-card-form" size-lg="6" size="12">
+                <ion-col formGroupName="errors" class="ns-card-form" size-xl="6" size="12">
                     <ion-list>
                         <ion-item color="danger">
                             <ion-label>
