--- a/src/app/scout/scout.component.html
+++ b/src/app/scout/scout.component.html
@@ -4,9 +4,14 @@
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-title>Match Scouting</ion-title>
+        <ion-spinner style="margin-right: 50px" slot="end" *ngIf="saveMatchSpinner"></ion-spinner>
+        <ion-button
+                *ngIf="!saveMatchSpinner"
+                (click)="saveMatch()" color="success" slot="end">
+            Save Match
+        </ion-button>
     </ion-toolbar>
 </ion-header>
-
 
 <ion-content>
     <ion-row
@@ -21,7 +26,7 @@
 
     <ion-row class="ion-justify-content-center" *ngIf="selectedEventStorage.teams.length !== 0">
         <ion-col>
-            <form [formGroup]="parentDataForm" novalidate>
+            <form [formGroup]="parentDataForm" novalidate *ngIf="parentDataForm !== undefined">
                 <ion-row class="ion-justify-content-center">
                     <ion-col size-xl="8" size-lg="10" size-md="12" class="ns-card-form">
                         <ion-row>
@@ -165,7 +170,7 @@
                 <ion-row class="ion-justify-content-center" formGroupName="results">
                     <ion-col class="ns-card-form-danger" size-lg="6">
                             <ion-row>
-                                <ion-col size="8">
+                                <ion-col size-lg="7" size="12">
                                     <ion-item class="ns-item-danger" lines="none">
                                         <ion-label class="ns-label-danger">
                                             <p class="ns-p-danger">
@@ -178,7 +183,7 @@
                                         <ion-toggle formControlName="flCrash" color="secondary"></ion-toggle>
                                     </ion-item>
                                 </ion-col>
-                                <ion-col size="4">
+                                <ion-col size-lg="5" size="12">
                                     <ion-row>
                                         <ion-col>
                                             <ion-item class="ns-item-danger" lines="none">
@@ -235,11 +240,13 @@
         <ion-col class="ns-card-form" size-lg="4">
             <ion-row>
                 <ion-col>
+                    <ion-spinner *ngIf="saveParentDataSpinner"></ion-spinner>
                     <ion-button
                             (click)="onSubmit()"
                             expand="block"
-                            color="success" [disabled]="parentDataForm.invalid || parentDataForm.pristine">
-                        Save
+                            *ngIf="!saveParentDataSpinner"
+                            color="success" [disabled]="!parentDataForm.valid || parentDataForm.pristine">
+                        Save Details
                     </ion-button>
                 </ion-col>
                 <ion-col>
@@ -294,9 +301,106 @@
 
     </ion-row>
 
+    <ion-row *ngIf="displayWidth < 993 && !showHelp">
+        <ion-col>
+            <ion-item lines="none">
+                <ion-icon slot="end" (click)="showHelp = !showHelp" name="help" color="medium"></ion-icon>
+            </ion-item>
+        </ion-col>
+    </ion-row>
+
+
     <ion-row class="ion-justify-content-center">
-        <ion-col size-lg="12">
+        <ion-col size-md="10" size-xs="12" *ngIf="displayWidth < 993 && showHelp">
+            <ion-row>
+                <ion-col class="ns-card-help">
+                    <ion-item class="ns-item-medium">
+                        <ion-label>
+                            <h4>
+                                Definitions
+                            </h4>
+                        </ion-label>
+                        <ion-icon color="light" (click)="showHelp = !showHelp" name="close"></ion-icon>
+                    </ion-item>
+
+                    <ul>
+                        <li>
+                            <b>NA</b> - Robot does not have this feature.
+                        </li>
+                        <li>
+                            <b>Failure</b> - Robot has this feature but it didn't work.
+                        </li>
+                        <li>
+                            <b>Success</b> - Robot has this feature and it worked.
+                        </li>
+                        <li>
+                            <ion-row class="ion-nowrap">
+                                <ion-col size="1">
+                                    <ion-button color="danger"> </ion-button>
+                                </ion-col>
+                                <ion-col>
+                                    Failed attempt at delivery
+                                </ion-col>
+                            </ion-row>
+                        </li>
+                        <li>
+                            <ion-row class="ion-nowrap">
+                                <ion-col size="1">
+                                    <ion-button color="success"> </ion-button>
+                                </ion-col>
+                                <ion-col>
+                                    Successful delivery
+                                </ion-col>
+                            </ion-row>
+                        </li>
+                    </ul>
+
+                </ion-col>
+            </ion-row>
+        </ion-col>
+        <ion-col size-lg="10" size="12">
             <router-outlet></router-outlet>
+        </ion-col>
+        <ion-col size-lg="2" *ngIf="displayWidth > 992">
+            <ion-row>
+                <ion-col class="ns-card-help">
+                    <h4>
+                        Definitions
+                    </h4>
+                    <ul>
+                        <li>
+                            <b>NA</b> - Robot does not have this feature.
+                        </li>
+                        <li>
+                            <b>Failure</b> - Robot has this feature but it didn't work.
+                        </li>
+                        <li>
+                            <b>Success</b> - Robot has this feature and it worked.
+                        </li>
+                        <li>
+                            <ion-row class="ion-nowrap">
+                                <ion-col size="3">
+                                    <ion-button color="danger"> </ion-button>
+                                </ion-col>
+                                <ion-col>
+                                    Failed attempt at delivery
+                                </ion-col>
+                            </ion-row>
+                        </li>
+                        <li>
+                            <ion-row class="ion-nowrap">
+                                <ion-col size="3">
+                                    <ion-button color="success"> </ion-button>
+                                </ion-col>
+                                <ion-col>
+                                    Successful delivery
+                                </ion-col>
+                            </ion-row>
+                        </li>
+                    </ul>
+
+                </ion-col>
+            </ion-row>
         </ion-col>
     </ion-row>
 
