--- a/src/assets/sass/_ns-card.scss
+++ b/src/assets/sass/_ns-card.scss
@@ -58,3 +58,23 @@
   //letter-spacing: 1px;
   text-align: center;
 }
+
+.ns-card-help {
+  @extend .ns-card-no-padding;
+  background-color: #989aa2;
+  padding-left: 5px;
+  padding-bottom: 10px;
+  color: #fff;
+  font-size: 14px;
+  text-align: unset;
+  & ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  & li {
+    margin-bottom: 5px;
+  }
+
+
+}
